Fix some data errors in sample IDataServiceProvider